# terminal_chat

./: CMakeLists.txt
app/: CMakeLists.txt
app/client/: main.cpp
app/server/: main.cpp
src/: CMakeLists.txt
src/chat/: enums.h  user.h
src/chat/chat/: chat.cpp  chat.h
src/chat/messages/: enums.h  message.h
src/chat/user/: colors.h  user.cpp  user.h
src/networking/: communication_socket.cpp  communication_socket.h  connection_socket.cpp  connection_socket.h
src/utils/: config.h  events.h  terminal.h
